<resources>
    <string name="app_name">SWASTH</string>
    <string name="title_activity_nav">nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bmi">BMI</string>
    <string name="health_news">HEALTH NEWS</string>
    <string name="water_intake">WATER INTAKE</string>
    <string name="health_blogs">HEALTH BLOGS</string>
    <string name="sleep_suggestion">SLEEP SUGGESTION</string>
    <string name="about">ABOUT</string>
    <string name="pedometer">PEDOMETER</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Blo">HEALTH BLOGS</string>
    <string name="pee">PEDOMETER</string>
    <string name="pero">HEALTH NEWS</string>
    <string name="abb">ABOUT</string>
    <string name="tip">This app provide you the best features in compare to other apps it can change your daily life schedule. In todays fast life we are depend on network and mobile so compare to websites people were more attractive to the phone applications, hence this app can use any time.</string>
    <string name="shop">Helath Shop</string>
    <string name="shp">HEALTH SHOP</string>
    <string name="user">This app does not sell user data to other companies it\'s a trustworthy app</string>
</resources>