<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.toot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.toot.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.toot.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/about"
        android:name="com.example.toot.fragment.about"
        android:label="@string/abb"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/news"
        android:name="com.example.toot.fragment.news"
        android:label="@string/pero"
        tools:layout="@layout/fragment_news" />
    <fragment
        android:id="@+id/blog"
        android:name="com.example.toot.fragment.blog"
        android:label="@string/Blo"
        tools:layout="@layout/fragment_blog" />


</navigation>